--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,5 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "vite": "^4.5.0"
+  },
+  "dependencies": {
+    "bootstrap-icons": "^1.11.1",
+    "canvas-confetti": "^1.9.0"
   }
 }
