--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,3 +15,6 @@ actix-cors = "0.6.4"
 env_logger = "0.10.0"
 meilisearch-sdk = "0.24.2"
 serde = { version = "1.0.189", features = ["derive"] }
+serde_json = "1.0"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
